fixed rating not responsive

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -153,11 +153,13 @@ a#openPopUp:hover{
     transition: opacity 0.35s ease;
 }
 .popup .popUpContainer{
-    width: 100%;
-    max-width: 700px;
+    width: 80%;
+    max-width: none;
     position: fixed;  /*To avoid scroll to target*/
-    left: 50%;
+    left: 10%;
     top: -100vh;
+    margin-left: 0;
+
 
     -webkit-transition: top  0.35s ease;
     -moz-transition: top 0.35s ease;
@@ -166,7 +168,6 @@ a#openPopUp:hover{
 
      /*Trick to properly center the element by using negative*/
     /*1/2 length of element as margin left and top*/
-    margin-left: -250px;
     background-color: #ffffff;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
